src/objects/HRM_Employee_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Adhar_Cad_No__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Adhar Cad No</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee Id</label>
        <referenceTo>HRM_Employee__c</referenceTo>
        <relationshipLabel>Employee Detail</relationshipLabel>
        <relationshipName>Employee_Detail_R</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAN_Card_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>PAN Card Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pa_Address1__c</fullName>
        <label>Address1</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pa_Address2__c</fullName>
        <label>Address2</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pa_City__c</fullName>
        <label>City</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pa_Pin_Code__c</fullName>
        <label>Pin Code</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pa_State__c</fullName>
        <label>State</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Id_No__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Voter ID NO</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Employee Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Emp_record</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
BEGINS(  Name  ,&apos;EMP&apos;), CONTAINS( Name , &apos;EMP&apos;) 
)</errorConditionFormula>
        <errorMessage>Rec name start with EMP</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Govt</fullName>
        <active>true</active>
        <errorConditionFormula>OR
   (
OR(
      AND(ISBLANK( Adhar_Cad_No__c ),ISBLANK(PAN_Card_Number__c ))
,NOT(ISBLANK(Voter_Id_No__c))
)
,

OR(
AND(ISBLANK( Adhar_Cad_No__c ),ISBLANK( Voter_Id_No__c))
,NOT(ISBLANK(PAN_Card_Number__c ))
)
)</errorConditionFormula>
        <errorMessage>At List One Govt Id Prof Require</errorMessage>
    </validationRules>
</CustomObject>